syntax = "proto3";
package infix.persistence.boltdb.v1;

option go_package = "github.com/dogmatiq/infix/persistence/provider/boltdb/internal/pb";

import "draftspecs/envelopespec/envelope.proto";

// QueueItem is a protocol buffers representation of a queuestore.Item.
message QueueItem{
  uint64 revision = 1;
  uint64 failure_count = 2;
  string next_attempt_at = 3;

  reserved 4 to 14;

  dogma.envelope.v1.Envelope Envelope = 15;
}
